--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,8 @@
 #         run: bun install --frozen-lockfile
 #       - name: Lint with Biome
 #         run: bun run lint
+#       - name: Test with Bun
+#         run: bun run test
 #       - name: Build with Vite
 #         run: bun run build
 #       - name: Upload artifact
