--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_HOMEPAGE="https://example.com"
+VITE_HOMEPAGE="https://aef.me/react-template"
 VITE_TITLE="React Template"
 VITE_DESCRIPTION="A React template with Vite, TypeScript, Tailwind, and more."
 VITE_THEME_COLOR="#000000"
