--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "start": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview --host",
-    "test": "VITE_SEED=42 bun test",
+    "test": "bun test",
     "lint": "biome ci .",
     "clean": "rm -rf .node_modules/.vite .swc dist"
   },
   "dependencies": {
     "@biomejs/biome": "^1",
     "@happy-dom/global-registrator": "^13",
+    "@swc-jotai/debug-label": "0.1.0",
     "@swc-jotai/react-refresh": "0.1.0",
     "@tailwindcss/container-queries": "^0",
     "@tailwindcss/forms": "^0",
@@ -33,6 +34,7 @@
     "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
+    "redaxios": "^0",
     "tailwindcss": "^3",
     "typescript": "^5",
     "vite": "5.1.5",
