--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "biomejs.biome",
     "bradlc.vscode-tailwindcss",
+    "oven.bun-vscode",
     "tamasfe.even-better-toml"
   ],
   "unwantedRecommendations": []
