--- a/package.json
+++ b/package.json
@@ -9,36 +9,45 @@
     "preview": "vite preview --host",
     "test": "bun test",
     "lint": "biome ci .",
-    "clean": "rm -rf .node_modules/.vite .swc dist"
+    "clean": "rm -rf .node_modules/.vite .swc dist",
+    "ui": "shadcn-ui"
   },
   "dependencies": {
-    "@biomejs/biome": "^1",
-    "@happy-dom/global-registrator": "^13",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "jotai": "^2.7.0",
+    "lucide-react": "0.359.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "redaxios": "^0.5.1",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "wouter": "^3.0.2"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.5.3",
+    "@happy-dom/global-registrator": "13.7.0",
     "@swc-jotai/debug-label": "0.1.0",
     "@swc-jotai/react-refresh": "0.1.0",
-    "@tailwindcss/container-queries": "^0",
-    "@tailwindcss/forms": "^0",
-    "@tailwindcss/typography": "^0",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@tsconfig/vite-react": "^3",
-    "@types/bun": "^1",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@tailwindcss/typography": "0.5.10",
+    "@testing-library/react": "14.2.1",
+    "@testing-library/user-event": "14.5.2",
+    "@tsconfig/vite-react": "3.0.1",
+    "@types/bun": "1.0.8",
+    "@types/node": "20.11.25",
+    "@types/react": "18.2.64",
+    "@types/react-dom": "18.2.21",
     "@vitejs/plugin-react-swc": "3.5.0",
-    "autoprefixer": "^10",
-    "clsx": "^2",
-    "jotai": "^2",
-    "lucide-react": "0.344.0",
-    "postcss": "^8",
-    "react": "^18",
-    "react-dom": "^18",
-    "redaxios": "^0",
-    "tailwindcss": "^3",
-    "typescript": "^5",
-    "vite": "5.1.5",
-    "wouter": "^3"
+    "autoprefixer": "10.4.18",
+    "postcss": "8.4.35",
+    "shadcn-ui": "0.8.0",
+    "typescript": "5.4.2",
+    "vite": "5.1.5"
   },
   "overrides": {
     "@swc/core": "1.3.105"
