--- a/biome.json
+++ b/biome.json
@@ -12,7 +12,7 @@
     "formatter": {
       "quoteStyle": "single",
       "semicolons": "asNeeded",
-      "trailingComma": "none"
+      "trailingCommas": "none"
     }
   },
   "linter": {
