--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_HOMEPAGE="https://aef.me/react-template"
 VITE_TITLE="React Template"
-VITE_DESCRIPTION="A starter kit with Vite, TypeScript, Tailwind, and more."
+VITE_DESCRIPTION="A starter kit for single page apps"
 VITE_THEME_COLOR="#000000"
