--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": ["@tsconfig/vite-react/tsconfig.json"],
-  "exclude": ["dist", "node_modules"],
+  "exclude": [".swc", "dist", "node_modules"],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
