Use editorconfig in biome

--- a/biome.json
+++ b/biome.json
@@ -1,12 +1,11 @@
 {
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
   "files": {
-    "ignore": [".swc", "dist", "node_modules", "public"]
+    "ignore": [".swc", "dist", "html", "node_modules", "package-lock.json", "public"]
   },
   "formatter": {
     "enabled": true,
-    "indentStyle": "space",
-    "lineWidth": 100
+    "useEditorconfig": true
   },
   "javascript": {
     "formatter": {
