--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,17 +19,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-      - name: Install deps
-        run: bun install --frozen-lockfile
-      - name: Lint with Biome
-        run: bun run lint
-      - name: Test with Bun
-        run: bun run test
-      - name: Build with Vite
-        run: bun run build
-      - name: Upload artifact
+      - name: Setup
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: .nvmrc
+          cache: npm
+          cache-dependency-path: package-lock.json
+      - name: Install
+        run: npm ci
+      - name: Lint
+        run: npm run lint
+      - name: Test
+        run: npm run test
+      - name: Build
+        run: npm run build
+      - name: Artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist/
