--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,4 @@
 {
-  "recommendations": [
-    "biomejs.biome",
-    "bradlc.vscode-tailwindcss",
-    "oven.bun-vscode",
-    "tamasfe.even-better-toml"
-  ],
+  "recommendations": ["biomejs.biome", "bradlc.vscode-tailwindcss", "vitest.explorer"],
   "unwantedRecommendations": []
 }
