--- a/package.json
+++ b/package.json
@@ -4,48 +4,55 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "start": "vite --host",
+    "start": "npm run dev",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview --host",
-    "test": "bun test",
+    "test": "vitest --no-coverage --no-watch",
+    "test:ui": "vitest --ui",
     "lint": "biome ci .",
-    "clean": "rm -rf .swc dist node_modules/.vite node_modules/.vite-temp"
+    "clean": "rimraf .swc dist html node_modules/.vite node_modules/.vite-temp",
+    "clean:all": "rimraf .swc dist html node_modules"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "1.1.6",
-    "@radix-ui/react-dropdown-menu": "2.1.6",
+    "@radix-ui/react-dialog": "1.1.14",
+    "@radix-ui/react-dropdown-menu": "2.1.15",
     "@radix-ui/react-icons": "1.3.2",
-    "@radix-ui/react-slot": "1.1.2",
+    "@radix-ui/react-slot": "1.2.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "framer-motion": "11.18.2",
-    "jotai": "2.12.2",
-    "lucide-react": "0.483.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "jotai": "2.12.4",
+    "lucide-react": "0.511.0",
+    "motion": "12.12.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "redaxios": "0.5.1",
-    "tailwind-merge": "2.6.0",
+    "tailwind-merge": "3.3.0",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "1.0.7",
-    "wouter": "3.6.0"
+    "wouter": "3.7.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@happy-dom/global-registrator": "17.4.4",
     "@swc-jotai/debug-label": "0.2.0",
     "@swc-jotai/react-refresh": "0.3.0",
     "@tailwindcss/typography": "0.5.16",
-    "@testing-library/react": "16.2.0",
+    "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "14.6.1",
     "@tsconfig/vite-react": "3.4.0",
-    "@types/bun": "1.2.5",
-    "@types/react": "18.3.19",
-    "@types/react-dom": "18.3.5",
+    "@types/node": "22.15.21",
+    "@types/react": "19.1.5",
+    "@types/react-dom": "19.1.5",
     "@vitejs/plugin-react-swc": "3.8.1",
+    "@vitest/coverage-istanbul": "3.1.4",
+    "@vitest/ui": "3.1.4",
     "autoprefixer": "10.4.21",
+    "happy-dom": "17.4.7",
     "postcss": "8.5.3",
-    "typescript": "5.8.2",
-    "vite": "6.2.2"
+    "rimraf": "6.0.1",
+    "typescript": "5.8.3",
+    "vite": "6.3.5",
+    "vitest": "3.1.4"
   },
   "overrides": {
     "@swc/core": "1.9.3"
