--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
     "react-dom": "19.1.0",
     "redaxios": "0.5.1",
     "tailwind-merge": "3.3.0",
-    "tailwindcss": "3.4.17",
-    "tailwindcss-animate": "1.0.7",
     "wouter": "3.7.0"
   },
   "devDependencies": {
@@ -37,6 +35,7 @@
     "@swc-jotai/debug-label": "0.2.0",
     "@swc-jotai/react-refresh": "0.3.0",
     "@tailwindcss/typography": "0.5.16",
+    "@tailwindcss/vite": "4.1.7",
     "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "14.6.1",
     "@tsconfig/vite-react": "3.4.0",
@@ -46,10 +45,11 @@
     "@vitejs/plugin-react-swc": "3.8.1",
     "@vitest/coverage-istanbul": "3.1.4",
     "@vitest/ui": "3.1.4",
-    "autoprefixer": "10.4.21",
     "happy-dom": "17.4.7",
     "postcss": "8.5.3",
     "rimraf": "6.0.1",
+    "tailwindcss": "4.1.7",
+    "tailwindcss-animate": "1.0.7",
     "typescript": "5.8.3",
     "vite": "6.3.5",
     "vitest": "3.1.4"
