--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "test": "vitest --no-coverage --no-watch",
     "test:ui": "vitest --ui",
     "lint": "biome ci .",
-    "clean": "rimraf .swc dist html node_modules/.vite node_modules/.vite-temp",
-    "clean:all": "rimraf .swc dist html node_modules"
+    "clean": "rimraf dist html node_modules/.vite node_modules/.vite-temp",
+    "clean:all": "rimraf dist html node_modules"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-dropdown-menu": "2.1.15",
     "@radix-ui/react-slot": "1.2.3",
+    "@vitejs/plugin-react-oxc": "0.2.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "jotai": "2.12.4",
@@ -27,12 +28,12 @@
     "react-dom": "19.1.0",
     "redaxios": "0.5.1",
     "tailwind-merge": "3.3.0",
+    "tailwindcss": "4.1.7",
+    "tw-animate-css": "1.3.0",
     "wouter": "3.7.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@swc-jotai/debug-label": "0.2.0",
-    "@swc-jotai/react-refresh": "0.3.0",
     "@tailwindcss/typography": "0.5.16",
     "@tailwindcss/vite": "4.1.7",
     "@testing-library/react": "16.3.0",
@@ -41,19 +42,12 @@
     "@types/node": "22.15.21",
     "@types/react": "19.1.5",
     "@types/react-dom": "19.1.5",
-    "@vitejs/plugin-react-swc": "3.8.1",
     "@vitest/coverage-istanbul": "3.1.4",
     "@vitest/ui": "3.1.4",
     "happy-dom": "17.4.7",
-    "postcss": "8.5.3",
     "rimraf": "6.0.1",
-    "tailwindcss": "4.1.7",
-    "tailwindcss-animate": "1.0.7",
     "typescript": "5.8.3",
-    "vite": "6.3.5",
+    "vite": "npm:rolldown-vite@6.3.12",
     "vitest": "3.1.4"
-  },
-  "overrides": {
-    "@swc/core": "1.9.3"
   }
 }
