--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-dropdown-menu": "2.1.15",
     "@radix-ui/react-slot": "1.2.3",
-    "@vitejs/plugin-react-oxc": "0.2.0",
+    "@vitejs/plugin-react": "4.5.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.511.0",
@@ -46,7 +46,7 @@
     "happy-dom": "17.4.7",
     "rimraf": "6.0.1",
     "typescript": "5.8.3",
-    "vite": "npm:rolldown-vite@6.3.12",
+    "vite": "6.3.5",
     "vitest": "3.1.4"
   }
 }
